tests/files/flow_controller_tests/should_run/006.cmdr
//Test simple variable assignment with tuples
x = (3.0, "hi", true, 1);
y = x;
print x;
print y;