tests/files/flow_controller_tests/should_fail/002.cmdr
//Should fail on tuple index out of bounds
x = (1, 3.0, "hi");
y = x[-1];